feat: EFCore Database First

--- a/SLHDotNetTrainingBatch2.ConsoleApp/SLHDotNetTrainingBatch2.ConsoleApp.csproj
+++ b/SLHDotNetTrainingBatch2.ConsoleApp/SLHDotNetTrainingBatch2.ConsoleApp.csproj
@@ -22,4 +22,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SLHDotNetTrainingBatch2.Database\SLHDotNetTrainingBatch2.Database.csproj" />
+  </ItemGroup>
+
 </Project>
